apps/media/radarr/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr:version-3.0.2.4552
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7878
          name: radarr
        resources: {}
        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /movies
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nfs-pvc-radarr
      - name: movies
        nfs:
          server: 10.0.40.2
          path: /mnt/vault/Media/Movies
      - name: downloads
        nfs:
          server: 10.0.40.2
          path: /mnt/vault/Media/downloads/completed
