apps/media/radarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  ports:
  - name: radarr
    targetPort: radarr
    port: 7878
  selector:
    app: radarr
