apps/media/radarr/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
  - host: radarr.home-lab.io
    http:
      paths:
      - path:
        backend:
          serviceName: radarr
          servicePort: 7878
